# task-management-system

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
